# UCSD-CSE-272-howework

./: CMakeLists.txt  README.md
output/vol3/: PhaseTest_HG_vol3_media1_1_5_0.5_0.5_media2_3_0.5_1_0.5_maxDepth_3.exr  PhaseTest_HG_vol3_media1_1_5_0.5_0.5_media2_3_0.5_1_0_maxDepth_3.exr  PhaseTest_HG_vol3_media1_1_5_0.5_0.5_media2_3_0.5_1_1_maxDepth_3.exr  PhaseTest_HG_vol3_media1_1_5_0.5_0_media2_3_0.5_1_0.5_maxDepth_3.exr  PhaseTest_HG_vol3_media1_1_5_0.5_1_media2_3_0.5_1_0.5_maxDepth_3.exr  test.exr  vol3_media1_0_5_0.05_media2_3_0.5_1.exr  vol3_media1_1_0_0.05_media2_3_0.5_1.exr  vol3_media1_1_10_0.05_media2_3_0.5_1.exr  vol3_media1_1_5_0.5_media2_0_0.5_1.exr  vol3_media1_1_5_0.5_media2_3_0.5_1_maxDepth_3_HenyeyGreenstein_g_0.25.exr  vol3_media1_1_5_0.5_media2_3_0.5_1_maxDepth_3_HenyeyGreenstein_g_0.75.exr  vol3_media1_1_5_0.5_media2_3_0.5_1_maxDepth_3_HenyeyGreenstein_g_1.exr  vol3_media1_1_5_0.5_media2_3_0.5_1_maxDepth_3_IsotropicPhase(init).exr  vol3_media1_1_5_0.5_media2_3_0_1.exr  vol3_media1_1_5_0.5_media2_3_15_1.exr  vol3_media1_1_5_0.5_media2_3_1_1.exr  vol3_media1_1_5_0.5_media2_3_5_1.exr  vol3_media1_1_5_0.5_media2_6_0.5_1.exr  vol3_media1_5_5_0.05_media2_3_0.5_1.exr
output/vol4/: test_4.exr  vol3_100000.exr  vol3_1024.exr
output/vol4_1/: test.exr  test_3.exr  test_caozhongrui.exr  vol3_10000.exr  vol3_30000.exr
output/vol4_2/: diffuse.exr  init_ssp256.exr  test.exr
output/vol5/: image.exr
output/vol5_1/: image.exr
output/vol5_2/: image.exr
output/vol5_3/: image.exr
output/vol5_4/: image.exr  image_no_medium.exr
output/vol6_1/: image_100000_noMIS.exr  image_1024_MIS.exr  image_5000_MIS.exr  image_512_MIS.exr
output/vol6_2/: image_5000_MIS.exr  image_64_MIS.exr  image_64_noMIS.exr
scenes/volpath_test/: hetvol.xml  hetvol_colored.xml  vol_cbox.xml  vol_cbox_teapot.xml  volpath_test1.xml  volpath_test3.xml  volpath_test4.xml  volpath_test4_2.xml  volpath_test5.xml  volpath_test5_2.xml  volpath_test6.xml
src/: intersection.cpp  main.cpp  medium.cpp  medium.h  render.cpp  vol_path_tracing.h  volume.cpp  volume.h
src/media/: heterogeneous.inl  homogeneous.inl
src/shapes/: sphere.inl
